--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>The CloudDSF - Prototype</title>
+<title>CloudDSF+ Prototype</title>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,24 +16,25 @@
 <!-- Stylesheets -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
 
+<!-- Global Style Sheets  -->
+<link href="./css/bootstrap.min.css" rel="stylesheet" />
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
-<link href="./css/prototypeLayout.css" rel="stylesheet" />
 
+<!-- Custom Style Sheets -->
+<link href="./css/prototypeLayout.css" rel="stylesheet" />
 <link href="./css/decisionRelations.css" rel="stylesheet" />
 <link href="./css/outcomeRelations.css" rel="stylesheet" />
 
-<!-- JavaScript - jQuery -->
+<!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-<!-- JavaScript - Bootstrap -->
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
-<!-- JavaScript - D3 -->
-<!--<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>-->
-<script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
+<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
+<!-- <script src="./js/lib/d3.4.13.js" type="text/javascript"></script> -->
 </head>
 
 <body>
 
-	<header class="navbar navbar-default navbar-static-top"
+	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -44,39 +45,29 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="./index.html"><strong>The
-						CloudDSF</strong></a>
+				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
-				<ul class="nav navbar-nav">
-					<li><a href="./index.html"><span
-							class="glyphicon glyphicon-home"></span> <span>Home</span><span
-							class="sr-only">(current)</span></a></li>
-					<li class="active"><a href="./cloudDSFPrototype.html"> <span
-							class="glyphicon glyphicon-globe"></span> <span>CloudDSF
-								Prototype</span></a></li>
-					<li><a href="./knowledgeBase.html"> <span
-							class="glyphicon glyphicon-book"></span> <span>Knowledge
-								Base</span></a></li>
-					<li><a href="./cloudDSFVisualization.html"> <span
-							class="glyphicon glyphicon-picture"></span> <span>Legacy
-								Visualizations</span></a></li>
-					<li><a href="./about.html"> <span
-							class="glyphicon glyphicon-flag"></span> <span>About</span>
+				<ul class="nav navbar-nav nav-justified">
+					<li><a href="./index.html"> <span
+							class="glyphicon glyphicon-home"></span> <span><strong>
+									CloudDSF+</strong></span></a></li>
+					<li class="active"><a href="./cloudDSFPrototype.html"> <!-- <span
+							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
 					</a></li>
-					<!-- 					<li class="dropdown"><a href="#" class="dropdown-toggle"
-						data-toggle="dropdown" role="button" aria-expanded="false">Dropdown
-							<span class="caret"></span>
-					</a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="#">Something else here</a></li>
-							<li class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-							<li class="divider"></li>
-							<li><a href="#">One more separated link</a></li>
-						</ul></li> -->
+					<li><a href="./knowledgeBase.html"> <!--  <span
+							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
+								Base</span>
+					</a></li>
+					<li><a href="./cloudDSFVisualization.html"> <!--  <span
+							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
+								Visualizations</span>
+					</a></li>
+					<li><a href="./about.html"> <!-- <span
+							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
+					</a></li>
 				</ul>
 			</nav>
 			<!-- /.navbar-collapse -->
@@ -105,9 +96,9 @@
 						<div id="toolbarDecisions" class="hidden">
 							<div id="buttonGroupRelations" class="btn-group">
 								<!-- data-toggle="buttons"> -->
-								
-								<label class="btn btn-success"> <input
-									type="checkbox" value="Influencing" autocomplete="off">Influencing
+
+								<label class="btn btn-success"> <input type="checkbox"
+									value="Influencing" autocomplete="off">Influencing
 								</label> <label class="btn btn-danger"> <input value="Requiring"
 									type="checkbox" autocomplete="off">Requiring
 								</label> <label class="btn btn-warning"> <input type="checkbox"
