--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -19,33 +19,36 @@ limitations under the License.
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>The CloudDSF - Legacy Visualizations</title>
+<title>The CloudDSF Visualizations</title>
 
-<!-- Style Sheets - Bootstrap -->
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+<!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
-
-<!-- Style Sheets - DSAMC -->
-<link href="./css/dsamc-layout.css" rel="stylesheet" />
-<link href="./css/dsamc-svg.css" rel="stylesheet" />
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 
-<!-- JavaScript - jQuery -->
+<!-- Custom Style Sheets -->
+<link href="./css/legacyLayout.css" rel="stylesheet" />
+
+<!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-<!-- JavaScript - Bootstrap -->
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
-<!-- JavaScript - D3 -->
-<!--<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>-->
-<script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
+<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 	$(function() {
 		initializationOfPage();
 	});
 </script>
-
 </head>
 <body>
-	<header class="navbar navbar-default navbar-static-top"
+
+	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -56,28 +59,29 @@ limitations under the License.
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="./index.html"><strong>The
-						CloudDSF</strong></a>
+				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
-				<ul class="nav navbar-nav">
-					<li><a href="./index.html"><span
-							class="glyphicon glyphicon-home"></span> <span>Home</span><span
-							class="sr-only">(current)</span></a></li>
-					<li><a href="./cloudDSFPrototype.html"> <span
-							class="glyphicon glyphicon-globe"></span> <span>CloudDSF
-								Prototype</span></a></li>
-					<li><a href="./knowledgeBase.html"> <span
-							class="glyphicon glyphicon-book"></span> <span>Knowledge
-								Base</span></a></li>
+				<ul class="nav navbar-nav nav-justified">
+					<li><a href="./index.html"> <span
+							class="glyphicon glyphicon-home"></span> <span><strong>
+									CloudDSF+</strong></span></a></li>
+					<li><a href="./cloudDSFPrototype.html"> <!-- <span
+							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
+					</a></li>
+					<li><a href="./knowledgeBase.html"> <!--  <span
+							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
+								Base</span>
+					</a></li>
 					<li class="active"><a href="./cloudDSFVisualization.html">
-							<span class="glyphicon glyphicon-picture"></span> <span>Legacy
+							<!--  <span
+							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
 								Visualizations</span>
 					</a></li>
-					<li><a href="./about.html"> <span
-							class="glyphicon glyphicon-flag"></span> <span>About</span>
+					<li><a href="./about.html"> <!-- <span
+							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
 					</a></li>
 				</ul>
 			</nav>
@@ -117,7 +121,9 @@ limitations under the License.
 			</div>
 		</div>
 	</div>
+
 	<hr style="margin-bottom: 0px;">
+
 	<div class="container-fluid">
 		<div class="row">
 			<div id="visContent" class="col-lg-9"></div>
@@ -164,14 +170,16 @@ limitations under the License.
 		</div>
 	</div>
 	<!-- 	<div class="clearfix"></div> -->
+
 	<hr style="margin-top: 0px">
+
 	<footer class="footer">
 		<div class="container">
 			<p>Copyright 2014 Alexander Darsow</p>
 		</div>
 	</footer>
 
-	<!-- JavaScript - DSAMC -->
-	<script src="./js/dsamc.js" type="text/javascript"></script>
+	<!-- JavaScript - Legacy Visualizations -->
+	<script src="./js/legacyVisualizations.js" type="text/javascript"></script>
 </body>
 </html>
