--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,41 +1,33 @@
-<!--
-Copyright 2014 Alexander Darsow
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>The CloudDSF - The Cloud Decision Support Framework</title>
+<title>CloudDSF+</title>
 
-<!-- Style Sheets - Bootstrap -->
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+<!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
-
-<!-- Style Sheets - DSAMC -->
-<!-- <link href="./css/dsamc-layout.css" rel="stylesheet" /> -->
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 
-<!-- JavaScript - jQuery -->
+<!-- Custom Style Sheets -->
+
+
+<!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-<!-- JavaScript - Bootstrap -->
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
+<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
 
 </head>
 <body>
-	<header class="navbar navbar-default navbar-static-top"
+	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -46,26 +38,28 @@ limitations under the License.
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="./index.html"><strong>The
-						CloudDSF</strong></a>
+				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="./index.html"><span
-							class="glyphicon glyphicon-home"></span> <span>Home</span><span
-							class="sr-only">(current)</span></a></li>
-					<li><a href="./cloudDSFPrototype.html"> <span
-							class="glyphicon glyphicon-globe"></span> <span>CloudDSF Prototype</span></a></li>
-					<li><a href="./knowledgeBase.html"> <span
-							class="glyphicon glyphicon-book"></span> <span>Knowledge
-								Base</span></a></li>
-					<li><a href="./cloudDSFVisualization.html"> <span
-							class="glyphicon glyphicon-picture"></span> <span>Legacy
-								Visualizations</span></a></li>
-					<li><a href="./about.html"> <span
-							class="glyphicon glyphicon-flag"></span> <span>About</span>
+				<ul class="nav navbar-nav nav-justified">
+					<li class="active"><a href="./index.html"> <span
+							class="glyphicon glyphicon-home"></span> <span><strong>
+									CloudDSF+</strong></span></a></li>
+					<li><a href="./cloudDSFPrototype.html"> <!-- <span
+							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
+					</a></li>
+					<li><a href="./knowledgeBase.html"> <!--  <span
+							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
+								Base</span>
+					</a></li>
+					<li><a href="./cloudDSFVisualization.html"> <!--  <span
+							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
+								Visualizations</span>
+					</a></li>
+					<li><a href="./about.html"> <!-- <span
+							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
 					</a></li>
 				</ul>
 			</nav>
@@ -131,7 +125,8 @@ limitations under the License.
 	<hr>
 	<footer class="footer">
 		<div class="container">
-			<p>Copyright 2014 Alexander Darsow</p>
+			<p>University of Sutttgart - Institute of Architecture of
+				Application Systems</p>
 		</div>
 	</footer>
 </body>
