--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -4,34 +4,31 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>The CloudDSF - Prototype</title>
+<title>CloudDSF+ Knowledge Base</title>
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-<!-- Style Sheets - Bootstrap -->
+
+<!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
-
-<!-- Style Sheets - DSAMC -->
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
-<link href="./css/prototypeLayout.css" rel="stylesheet" />
-<!-- <link href="./css/knowledgeBase.css" rel="stylesheet" /> -->
-<link href="./css/f2.css" rel="stylesheet" />
 
-<!-- JavaScript - jQuery -->
+<!-- Custom Style Sheets -->
+
+
+<!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-<!-- JavaScript - Bootstrap -->
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
-<!-- JavaScript - D3 -->
-<!--<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>-->
-<script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
+<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
 </head>
 
 <body>
 
-	<header class="navbar navbar-default navbar-static-top"
+	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -42,27 +39,28 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="./index.html"><strong>The
-						CloudDSF</strong></a>
+				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
-				<ul class="nav navbar-nav">
-					<li><a href="./index.html"><span
-							class="glyphicon glyphicon-home"></span> <span>Home</span><span
-							class="sr-only">(current)</span></a></li>
-					<li><a href="./cloudDSFPrototype.html"> <span
-							class="glyphicon glyphicon-globe"></span> <span>CloudDSF
-								Prototype</span></a></li>
-					<li class="active"><a href="./knowledgeBase.html"> <span
-							class="glyphicon glyphicon-book"></span> <span>Knowledge
-								Base</span></a></li>
-					<li><a href="./cloudDSFVisualization.html"> <span
-							class="glyphicon glyphicon-picture"></span> <span>Legacy
-								Visualizations</span></a></li>
-					<li><a href="./about.html"> <span
-							class="glyphicon glyphicon-flag"></span> <span>About</span>
+				<ul class="nav navbar-nav nav-justified">
+					<li><a href="./index.html"> <span
+							class="glyphicon glyphicon-home"></span> <span><strong>
+									CloudDSF+</strong></span></a></li>
+					<li><a href="./cloudDSFPrototype.html"> <!-- <span
+							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
+					</a></li>
+					<li class="active"><a href="./knowledgeBase.html"> <!--  <span
+							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
+								Base</span>
+					</a></li>
+					<li><a href="./cloudDSFVisualization.html"> <!--  <span
+							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
+								Visualizations</span>
+					</a></li>
+					<li><a href="./about.html"> <!-- <span
+							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
 					</a></li>
 				</ul>
 			</nav>
@@ -76,8 +74,8 @@
 			<div class="col-md-2 sidebar-offcanvas" id="sidebar"
 				role="navigation">
 				<div class="list-group">
-					<a id="buttonTree" href="#" class="list-group-item active">Tree Layout</a> <a href="#"
-						class="list-group-item">Link</a> <a href="#"
+					<a id="buttonTree" href="#" class="list-group-item active">Tree
+						Layout</a> <a href="#" class="list-group-item">Link</a> <a href="#"
 						class="list-group-item">Link</a>
 				</div>
 				<button id="toggleButton" type="button"
@@ -91,8 +89,8 @@
 				<div class="row">
 					<div class="col-md-12 text-left">
 						<div class="btn-group">
-						<!-- 	<button id="buttonTree" type="button" class="btn btn-primary">Tree</button> -->
-<!-- 							<button id="buttonPartition" type="button" class="btn btn-info">Partition</button>
+							<!-- 	<button id="buttonTree" type="button" class="btn btn-primary">Tree</button> -->
+							<!-- 							<button id="buttonPartition" type="button" class="btn btn-info">Partition</button>
 							<button id="buttonTreeMap" type="button" class="btn btn-sucess">TreeMap</button> -->
 						</div>
 					</div>
